2004-09-04  Not Zed  <NotZed@Ximian.com>

	* images/Makefile: add a temporary makefile to build images from
	source pic files.

	* evolution-plugin-manual.xml: updates/rearrangements.

2004-09-01  Not Zed  <NotZed@Ximian.com>

	* images/*: added some image files.

	* evolution-plugin-manual.xml: fix for some api changes.  Updates.

2004-08-25  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: Added the working plugin manual
	in-case i crash my bike going to work one day.

2003-11-20  JP Rosevear <jpr@ximian.com>

	* Remove dead doc files.

2003-09-11  Dan Winship  <danw@ximian.com>

	* calendar/cal-client/Makefile.am (GTKDOC_LIBS): Use non-static
	libraries.

	* calendar/cal-util/Makefile.am (GTKDOC_LIBS): Likewise